--- a/Contactos.html
+++ b/Contactos.html
@@ -38,7 +38,7 @@
         <div  style="float: left; width:49.85%; height: 610px;" class="formulario3">
           <article style="height: 100%; width: 95%;">
             <br>
-            <h2 style="text-align: center; color:rgb(243, 205, 36); ">Formulario de contrato</h2>
+            <h2 style="text-align: center; color:rgb(243, 205, 36); ">Formulario de Contacto</h2>
             <br>
             <br>
             <p class="etiquetas" style="text-align:left;">
