--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <br><br><br><br>
 <main>
 <div class="indexmain">
-    <h1>El sistema de gestión para tu negocio</h1>
+    <h1>El sistema de gestión para tu negocioo</h1>
     <br>
     <h3>Solicitá hoy tu demo gratuita con un experto.</h3>
     <br>
