--- a/login.html
+++ b/login.html
@@ -4,6 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Curso</title>
+    <meta name="author" content="Grupo Aula 3">
+    <meta name="description" content="sistema de facturacion vinculada a tu sitio web">
+    <meta name="keywords" content="facturas,deposito,control,almacen,presupuesto">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://kit.fontawesome.com/438f346520.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
