--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
                 <ul>
                     <li><a  href="index.html">Inicio</a></li>
-                    <li><a  href="http://hfdistribuidora.com/">Tienda</a></li>
+                    <li><a  href="http://hfdistribuidora.com/" target="blank">Tienda</a></li>
                     <li><a  href="contacto.html">Contacto</a></li> 
                     <li><a  href="login.html">Login</a>
                         <ul>
