--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <h1>El sistema de gestión para tu negocio</h1>
     <br>
     <h3>Solicitá hoy tu demo gratuita con un experto.</h3>
+    <h3>Solicitá hoy tu demo gratuita con un experto.</h3>
     <br>
     <input type="submit" value="Descargas" class="botondesc">  
 </div>
