--- a/registro.html
+++ b/registro.html
@@ -62,7 +62,7 @@
                 </div>  
                   
                 <div class="contenedor1">
-                    <i class="fas fa-user-alt icono"></i>  
+                    <i class="fas fa-city icono"></i>  
                     <input type="text" placeholder="Provincia" class="cuadrado">    
                 </div>
 
