--- a/login.html
+++ b/login.html
@@ -27,9 +27,9 @@
                     <li><a  href="index.html">Inicio</a></li>
                     <li><a  href="http://hfdistribuidora.com/" target="blank">Tienda</a></li>
                     <li><a  href="contacto.html">Contacto</a></li> 
-                    <li><a  href="login.html">Login</a>
+                    <li><a  href="registro.html">Login</a>
                     <ul>
-                        <li><a  href="registro.html">Registrar</a>
+                        <li><a  href="login.html">Registrar</a>
                     </ul>
                     </li>
                 </ul>
