--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Curso</title>
     <meta name="author" content="Grupo Aula 3">
     <meta name="description" content="sistema de facturacion vinculada a tu sitio web">
-    <meta name="keywords" content="facturas,deposito,control,almacen,presupuesto">
+    <meta name="keywords" content="facturas,deposito,control,remito,almacen,presupuesto">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://kit.fontawesome.com/438f346520.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
