--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <p>© 2021 Todo los Derechos Reservados</p>
                 </div> 
                 <div class="information">
-                    <a href="">Informacion Compañia |</a>  <a href="">Privacion y Politica |</a> <a href="">Termino y Condiciones</a>
+                    <a href="">Informacion Compañia |</a>  <a href="">Politica de Privacidad |</a> <a href="">Termino y Condiciones</a>
                 </div>              
         </div>
     </div>
