--- a/contacto.html
+++ b/contacto.html
@@ -124,16 +124,20 @@
                     <p>info@sistemas.com.ar</p>
                 </div>    
             </div>
+
+
+
                
         <div class="conteiner-footer2">
                 <div class="copyright">
                     <p>© 2021 Todo los Derechos Reservados</p>
                 </div> 
                 <div class="information">
-                    <a href="">Informacion Compañia |</a>  <a href="">Politica y privacidad |</a> <a href="">Termino y Condiciones</a>
+                    <a href="">Informacion Compañia |</a>  <a href="">Politica de Privacidad |</a> <a href="">Termino y Condiciones</a>
                 </div>              
         </div>
     </div>
 </footer>
+   
 </body>
 </html>
