--- a/login.html
+++ b/login.html
@@ -66,6 +66,7 @@
             <div class="columna1">
                 <h1>Dirección</h1>
                 <p>Buenos Aires 573</p>
+
                 <br>
                 <p>Cordoba, Villa Allende</p>
                 <br>
@@ -101,14 +102,15 @@
         </div>
         
         <div class="conteiner-footer2">
-                <div class="copyright">
-                    <p>© 2021 Todo los Derechos Reservados</p>
-                </div> 
-                <div class="information">
-                    <a href="">Informacion Compañia |</a>  <a href="">Privacion y Politica |</a> <a href="">Termino y Condiciones</a>
-                </div>              
-        </div>
+            <div class="copyright">
+                <p>© 2021 Todo los Derechos Reservados</p>
+            </div> 
+            <div class="information">
+                <a href="">Informacion Compañia |</a>  <a href="">Politica de Privacidad |</a> <a href="">Termino y Condiciones</a>
+            </div>              
     </div>
+</div>
 </footer>
+
 </body>
 </html>
