--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Curso</title>
-    <meta name="author" content="Grupo Aula 3">
+    <meta naSme="author" content="Grupo Aula 3">
     <meta name="description" content="sistema de facturacion vinculada a tu sitio web">
     <meta name="keywords" content="facturas,deposito,control,almacen,presupuesto">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
@@ -130,14 +130,15 @@
         </div>
         
         <div class="conteiner-footer2">
-                <div class="copyright">
-                    <p>© 2021 Todo los Derechos Reservados</p>
-                </div> 
-                <div class="information">
-                    <a href="">Informacion Compañia |</a>  <a href="">Privacion y Politica |</a> <a href="">Termino y Condiciones</a>
-                </div>              
-        </div>
+            <div class="copyright">
+                <p>© 2021 Todo los Derechos Reservados</p>
+            </div> 
+            <div class="information">
+                <a href="">Informacion Compañia |</a>  <a href="">Politica de Privacidad |</a> <a href="">Termino y Condiciones</a>
+            </div>              
     </div>
+</div>
 </footer>
+
 </body>
 </html>
