add terminos y condiciones

--- a/contacto.html
+++ b/contacto.html
@@ -130,7 +130,7 @@
                     <p>© 2021 Todo los Derechos Reservados</p>
                 </div> 
                 <div class="information">
-                    <a href="">Informacion Compañia |</a>  <a href="">Politica y privacidad |</a> <a href="">Termino y Condiciones</a>
+                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Privacion y Politica |</a> <a href="terminos.html">Termino y Condiciones</a>
                 </div>              
         </div>
     </div>
