--- a/registro.html
+++ b/registro.html
@@ -134,8 +134,8 @@
                     <p>© 2021 Todo los Derechos Reservados</p>
                 </div> 
                 <div class="information">
-                    <a href="">Informacion Compañia |</a>  <a href="">Privacion y Politica |</a> <a href="">Termino y Condiciones</a>
-                </div>              
+                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Privacion y Politica |</a> <a href="terminos.html">Termino y Condiciones</a>
+                </div>               
         </div>
     </div>
 </footer>
