--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://github.com/PPROF1-2021/g5-a3g5/blob/master/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="shorcut icon" href="img/logo.jpg">
 </head>
 <body>
@@ -23,7 +23,7 @@
                         <img class="logo" src="img/logo.png" width="124" height="105" alt="logo sin imagen">
                     </a>
                 </div>
-             
+            
                 <ul>
                     <li><a  href="index.html">Inicio</a></li>
                     <li><a  href="http://hfdistribuidora.com/" target="blank">Tienda</a></li>
@@ -124,11 +124,7 @@
                     <p>© 2021 Todo los Derechos Reservados</p>
                 </div> 
                 <div class="information">
-<<<<<<< HEAD
-                    <a href="">Informacion Compañia |</a>  <a href="">Politica de Privacidad |</a> <a href="">Termino y Condiciones</a>
-=======
                     <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Privacion y Politica |</a> <a href="terminos.html">Termino y Condiciones</a>
->>>>>>> Gaston
                 </div>              
         </div>
     </div>
