--- a/contacto.html
+++ b/contacto.html
@@ -6,12 +6,12 @@
     <title>Curso</title>
     <meta name="author" content="Grupo Aula 3">
     <meta name="description" content="sistema de facturacion vinculada a tu sitio web">
-    <meta name="keywords" content="facturas,deposito,control,almacen,presupuesto">
+    <meta name="keywords" content="facturas,deposito,control,remito,almacen,presupuesto">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://kit.fontawesome.com/438f346520.js" crossorigin="anonymous"></script>
     <script src='main.js'></script>
-    <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet"> 
     <link rel="shorcut icon" href="img/logo.jpg">
 </head>
 <body>
