--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://kit.fontawesome.com/438f346520.js" crossorigin="anonymous"></script>
     <script src='main.js'></script>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://github.com/PPROF1-2021/g5-a3g5/blob/master/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet"> 
     <link rel="shorcut icon" href="img/logo.jpg">
 </head>
 <body>
