--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="menu">
                 <div>
                     <a href="index.html">
-                        <img class="logo" src="img/logo.png" width="124" height="105" alt="logo sin imagen">
+                        <img class="logo" src="./img/logo.png" width="124" height="105" alt="logo sin imagen">
                     </a>
                 </div>      
                 <ul>
