--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src='main.js'></script>
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet"> 
-    <link rel="shorcut icon" href="img/logo.jpg">
+    <link rel="shorcut icon" href="./img/logo.jpg">
 </head>
 <body>
     <header class="encabezado">
