--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <p>© 2021 Todo los Derechos Reservados</p>
                 </div> 
                 <div class="information">
-                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Privacion y Politica |</a> <a href="terminos.html">Termino y Condiciones</a>
+                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Politica de Privacidad|</a> <a href="terminos.html">Termino y Condiciones</a>
                 </div>              
         </div>
     </div>
