--- a/login.html
+++ b/login.html
@@ -102,13 +102,12 @@
         </div>
         
         <div class="conteiner-footer2">
-                <div class="copyright">
-                    <p>© 2021 Todo los Derechos Reservados</p>
-                </div> 
-                <div class="information">
-                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Privacion y Politica |</a> <a href="terminos.html">Termino y Condiciones</a>
-                </div>              
-        </div>
+            <div class="copyright">
+                <p>© 2021 Todo los Derechos Reservados</p>
+            </div> 
+            <div class="information">
+                <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Politica de Privacidad|</a> <a href="terminos.html">Termino y Condiciones</a>
+            </div>              
     </div>
 </div>
 </footer>
