--- a/terminos.html
+++ b/terminos.html
@@ -83,15 +83,16 @@
                 </div>    
             </div>
                
-        <div class="conteiner-footer2">
+            <div class="conteiner-footer2">
                 <div class="copyright">
                     <p>© 2021 Todo los Derechos Reservados</p>
                 </div> 
                 <div class="information">
-                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Privacion y Politica |</a> <a href="terminos.html">Termino y Condiciones</a>
+                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Politica de Privacidad|</a> <a href="terminos.html">Termino y Condiciones</a>
                 </div>              
         </div>
     </div>
 </footer>
+   
 </body>
 </html>
