--- a/registro.html
+++ b/registro.html
@@ -135,7 +135,7 @@
                     <p>© 2021 Todo los Derechos Reservados</p>
                 </div> 
                 <div class="information">
-                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Privacion y Politica |</a> <a href="terminos.html">Termino y Condiciones</a>
+                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Privacion de Politica |</a> <a href="terminos.html">Termino y Condiciones</a>
                 </div>               
         </div>
     </div>
