--- a/terminos.html
+++ b/terminos.html
@@ -13,6 +13,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="shorcut icon" href="img/logo.jpg">
 </head>
 <body>
@@ -93,6 +94,8 @@
         </div>
     </div>
 </footer>
-   
+    
+    <script src="js/jquery.js"></script>  
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
