--- a/registro.html
+++ b/registro.html
@@ -135,7 +135,7 @@
                     <p>© 2021 Todo los Derechos Reservados</p>
                 </div> 
                 <div class="information">
-                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Privacion de Politica |</a> <a href="terminos.html">Termino y Condiciones</a>
+                    <a href="informacion.html">Informacion Compañia |</a>  <a href="politica.html">Politica de Privacidad |</a> <a href="terminos.html">Termino y Condiciones</a>
                 </div>               
         </div>
     </div>
@@ -144,3 +144,5 @@
 
 </body>
 </html>
+
+<!--   https://pprof1-2021.github.io/g5-a3g5/index.html  -->
