--- a/terminos.html
+++ b/terminos.html
@@ -84,19 +84,22 @@
                 </div>    
             </div>
                
-            <div class="conteiner-footer2">
-                <div class="copyright">
-                    <p>© 2021 Todo los Derechos Reservados</p>
-                </div> 
-                <div class="information">
-                    <a href="informacion.html">Informacion Compañia |   </a>  <a href="politica.html">Politica de Privacidad    |   </a> <a href="terminos.html">Termino y Condiciones</a>
-                </div>              
-        </div>
-    </div>
+
+<div class="conteiner-footer2">
+    <div class="copyright">
+        <p>© 2021 Todo los Derechos Reservados</p>
+    </div> 
+    <div class="information">
+        <a href="informacion.html">Informacion Compañia  </a><a href="politica.html">| Politica de Privacidad |</a> <a href="terminos.html">Termino y Condiciones</a>
+    </div>              
+</div>
+</div>
 </footer>
-    
-    <script src="js/jquery.js"></script>  
-    <script src="js/bootstrap.min.js"></script>
+
+<script src="js/jquery.js"></script>  
+<script src="js/bootstrap.min.js"></script>
+
+
 </body>
 </html>
 
