FE - Termino y Condiciones #10

--- a/terminos.html
+++ b/terminos.html
@@ -13,7 +13,6 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="shorcut icon" href="img/logo.jpg">
 </head>
 <body>
@@ -42,11 +41,332 @@
 <main>
   
 
-
-
-
-
-
+<h2>Términos y condiciones</h2>
+<br>
+<br>
+<p>Por favor, leé cuidadosamente los Términos y Condiciones Generales del 
+    sitio https://gastonloco.github.io/ que se detallan a continuación. 
+    Es importante que prestes atención a lo establecido en el presente 
+    convenio, ya que el mismo contiene información de tu interés relacionada 
+    con el uso del Servicio. Al acceder al Servicio o a cualquiera de sus 
+    páginas, te comprometes a cumplir y aceptar TODOS los términos y 
+    condiciones que aparecen a continuación. En caso de no estar de 
+    acuerdo con estos términos y condiciones no accedas al Sitio.</p>
+<br>
+<br>
+<h3>1. Condiciones generales del servicio SISTEMA DE GESTIÓN PARA TU NEGOCIO</h3>
+<br>
+<br>
+<p>1.1. Estas Condiciones Generales regulan la prestación del Servicio  
+    sistema de gestión para tu negocio  la pulsación del botón “ENVIAR” por 
+    parte del CLIENTE atribuye a éste la condición de usuario del SERVICIO e 
+    implica la aceptación, íntegra de las presentes Condiciones Generales. 
+    Dicha aceptación deviene indispensable para la prestación del SERVICIO. 
+    El Cliente manifiesta, en tal sentido, haber leído, entendido y aceptado 
+    las presentes Condiciones Generales, puestas a su disposición, en todo momento, 
+    con carácter previo a la contratación, en la 
+    url:  https://gastonloco.github.io/terminosycondiciones 
+    ” La utilización del SERVICIO conlleva, asimismo, la aceptación por parte del 
+    Cliente de los reglamentos e instructivos de ayuda que fueron puestos en su 
+    conocimiento por parte de soporte de la 
+    empresa “https://gastonloco.github.io/ contacto/soporte”</p>
+<br>
+<p>1.2. EL CLIENTE no deberá usar o alterar EL SERVICIO con ninguna finalidad, 
+    ni podrá utilizarlo para cualquier otro propósito que el señalado en la 
+    cláusula 3.1 del presente.</p>
+<br>
+<br>
+<h3>2. Objeto</h3>
+<br>
+<br>
+<p>Las presentes Condiciones Generales tienen por objeto regular la comercialización 
+    del SERVICIO y la utilización del mismo por el CLIENTE sujeto a las condiciones 
+    que establece el sistema de gestión para tu negocio, así como la contraprestación 
+    a pagar por el CLIENTE mediante  la forma mencionada y fijada con cada cliente 
+    durante la contratación del servicio. Esto último, no se aplica al lanzamiento 
+    promocional que se extiende gratuitamente para una demostración  que se ofrece  
+    a LOS CLIENTES  al único efecto de que conozcan, prueben y confirmen las 
+    funcionalidades del servicio. Con dicho sistema, el CLIENTE podrá almacenar 
+    fácilmente gran cantidad de datos en la nube con agilidad y simpleza.</p>
+<br>
+<br>
+<h3>3. Descripción del servicio y cobertura</h3>
+<br>
+<br>
+<p>3.1. Descripción del servicio. Es una herramienta destinadas a PYMEs,  Microempresas 
+y Empresas en general. El SERVICIO dispone de un entorno simple, que permite 
+gestionar tus ventas, administrar tus compras y controlar tu stock.  Lo cual 
+incluye  el acceso a la gestión de cuentas a pagar (proveedores), cuentas a 
+cobrar (clientes), gestión de fondos (tesorería) y contabilidad (libro diario, mayores, 
+balances). También muestra información fiscal a través de los reportes de 
+IVA Compras/Ventas, regímenes de retención, entre otros. El SERVICIO es una 
+aplicación 100% Online y por tanto no requiere de la instalación de ningún 
+software en la PC, posibilitándose de esta forma el acceso desde cualquier 
+sitio utilizando un simple navegador y una conexión a Internet.</p>
+<br>
+<p>3.2. Titularidad del SERVICIO. El SERVICIO resulta de exclusiva titularidad de 
+SISTEMA DE GESTIÓN PARA TU NEGOCIO quien es el encargado y responsable frente 
+al CLIENTE de prestar el SERVICIO satisfactoriamente y de su correcto funcionamiento. 
+EL CLIENTE no tendrá ningún derecho de propiedad sobre EL SERVICIO, ni permitirá 
+su uso por parte de terceros. Por ende, EL CLIENTE no podrá vender, arrendar, 
+prestar, revelar, transmitir o transferir bajo ningún título, ni copiar EL SERVICIO 
+a favor de terceros. Si no obstante, ésta cláusula, el cliente de todas formas 
+llevara a cabo cualquiera de estas conductas, la empresa se reserva el derecho 
+de iniciar las acciones legales correspondientes.</p>
+<br>  
+<p>3.3. Soporte. EL SISTEMA DE GESTIÓN PARA TU NEGOCIO presta en forma exclusiva 
+al CLIENTE el Servicio de Soporte, Atención y Gestión de Incidencias que pueda 
+presentar el SERVICIO.</p>
+<br>
+<p>3.4. Cobertura y funcionalidades del SERVICIO. El CLIENTE podrá acceder a un 
+manual de usuario interactivo disponible en el portal de contratación y uso del 
+SERVICIO, a través de la url https://gastonloco.github.io/ contacto/soporte con 
+el propósito de conocer en detalle el plan de cobertura y las funciones del SERVICIO.</p>
+<br>
+<p>3.5. Modificación y actualización de versiones. SISTEMA DE GESTIÓN PARA TU NEGOCIO 
+podrá modificar o reinstalar EL SERVICIO bajo los términos y condiciones incluidos 
+en el presente, reemplazándolo por versiones actualizadas, cada vez que lo considere 
+conveniente.</p>
+<br>
+<br>
+<h3>4. Servicio de soporte y atención al cliente</h3>
+<br>
+<br>
+<p>SISTEMA DE GESTIÓN PARA TU NEGOCIO pone a disposición del CLIENTE el servicio de 
+soporte y vías de atención al cliente descriptas en la url https://gastonloco.github.io/ 
+contacto/soporte</p>
+<br>
+<br>
+<h3>5. Obligaciones del cliente</h3>
+<br>
+<br>
+<p>5.1. Pago del Precio del SERVICIO. El abono se realizará según los valores indicados 
+y los medios de pagos que se acordaron con cada CLIENTE de acuerdo al plan solicitado 
+y mejoras requeridas por el CLIENTE durante la contratación del SERVICIO. A excepción 
+de aquellos servicios gratuitos otorgados por  la EMPRESA establecidos en el punto 
+2-OBJETO de las presentes condiciones. SISTEMA DE GESTIÓN PARA TU NEGOCIO podrá 
+realizar variaciones en los precios por razones comerciales, informando al CLIENTE 
+de los cambios en la cuota, con treinta (30) días de antelación. En el caso de que 
+EL CLIENTE manifieste su disconformidad con las nuevas tarifas, podrá rescindir 
+unilateralmente la relación de prestación de servicios regulada en estas Condiciones 
+Generales, sin que ello le ocasione penalización o costo adicional alguno.</p>
+<br>
+<p>5.2. Uso correcto del SERVICIO. El CLIENTE se compromete y obliga a utilizar 
+el SERVICIO de conformidad con la legislación vigente, la moral, las buenas 
+costumbres y el orden público, así como a abstenerse de utilizar el Servicio 
+con fines ilícitos o prohibidos en las presentes Condiciones Generales, que 
+sean lesivos de los derechos e intereses de terceros, o que de cualquier otra 
+forma pudiesen dañar, inutilizar, sobrecargar o deteriorar los Servicios, los 
+equipos informáticos de otros CLIENTES o de otros usuarios de Internet 
+(hardware y software) así como los documentos, archivos y toda clase de 
+contenidos almacenados en sus equipos informáticos (hacking), o impedir 
+la normal utilización o disfrute de dichos Servicios, equipos informáticos 
+y documentos, archivos y contenidos por parte de los demás CLIENTES y de otros 
+usuarios.</p>
+<br>
+<p>5.3. Claves de acceso. En relación con las Claves de Acceso, el CLIENTE asume 
+la obligación de hacer un uso diligente de las Claves de Acceso y de mantener 
+en secreto las mismas. SISTEMA DE GESTIÓN PARA TU NEGOCIO no se responsabiliza 
+del uso que haga tanto el usuario, como terceras personas de las claves de acceso. 
+En todos los casos, el CLIENTE responderá por los gastos correspondientes a la 
+utilización del SERVICIO por cualquier tercero que emplee al efecto sus Claves 
+de Acceso. El CLIENTE asegura que la información que se ha brindado es veraz y precisa.</p>
+<br>
+<p>5.4. Colaboración con SISTEMA DE GESTIÓN PARA TU NEGOCIO. El CLIENTE se obliga a 
+facilitar a SISTEMA DE GESTIÓN PARA TU NEGOCIO la colaboración necesaria para todas 
+aquellas cuestiones y actividades que se planteen durante el período de comercialización 
+o que guarden relación con el mismo.</p>
+<br>
+<p>5.5. Incumplimiento de las cláusulas. SISTEMA DE GESTIÓN PARA TU NEGOCIO podrá 
+retirar o suspender en cualquier momento y sin necesidad de previo aviso, 
+la prestación del servicio a aquellos CLIENTES que incumplan lo establecido 
+en estas Condiciones. Al tratarse de razones que se encuentras justificadas, 
+SISTEMA DE GESTIÓN PARA TU NEGOCIO no deberá hacerse responsable por los 
+eventuales daños y perjuicios que la interrupción del SERVICIO por parte de 
+SISTEMA DE GESTIÓN PARA TU NEGOCIO podría llegar a ocasionar al CLIENTE.</p>
+<br>
+<br>
+<h3>6. Garantías por parte de EL SISTEMA DE GESTIÓN PARA TU NEGOCIO</h3>
+<br>
+<br>
+<p>6.1. Garantías y obligaciones de SISTEMA DE GESTIÓN PARA TU NEGOCIO. SISTEMA 
+DE GESTIÓN PARA TU NEGOCIO ofrece el SERVICIO con un nivel de diligencia razonable 
+desde el punto de vista comercial, por lo que se espera que el CLIENTE no tenga 
+inconvenientes al utilizarlo. No obstante, SISTEMA DE GESTIÓN PARA TU NEGOCIO no 
+puede ofrecer garantías absolutas sobre el SERVICIO.</p>
+<br>
+<p>6.2. Clausula de indemnidad. SISTEMA DE GESTIÓN PARA TU NEGOCIO garantiza 
+la efectividad del sistema en la forma indicada en el sitio web. SISTEMA DE 
+GESTIÓN PARA TU NEGOCIO no se responsabiliza ni otorga garantía alguna respecto 
+a que el software goce de ausencia de errores, interrupciones, fallas, problemas 
+de compatibilidad con el hardware o cualquier otro tipo de defectos que no hayan 
+sido contemplados en este convenio. Estos incluyen daños por errores, omisiones, 
+interrupciones, defectos, atrasos, virus informáticos, pérdida de datos, acceso 
+no autorizado, alteración de sus transmisiones y datos, pérdidas tangibles o 
+intangibles o cualquier otra falla que sea imputable a SISTEMA DE GESTIÓN PARA 
+TU NEGOCIO.</p>
+<br>
+<br>
+<h3>7. Utilización del servicio bajo la exclusiva responsabilidad del cliente</h3>
+<br>
+<br>
+<p>7.1. El CLIENTE asume todos los riesgos y responsabilidades relacionadas con la 
+selección del SERVICIO para alcanzar los resultados que se propone, así como la 
+posible instalación, uso y resultados obtenidos.</p>
+<br>
+<p>7.2. El CLIENTE entiende y acepta que el software puede no estar disponible o 
+llegar a ser indisponible debido a varios factores, incluyendo 
+(a modo ejemplificativo): mantenimiento periódico del sistema, ya sea programado o no, 
+responsabilidad por caso fortuito, falla técnica del software, infraestructura de 
+telecomunicaciones, retraso en la prestación del servicio, virus, ataques de rechazo 
+del servicio, incrementos o fluctuaciones en la demanda, acciones y omisiones de terceros, 
+o cualquier otra causa fuera del control razonable de SISTEMA DE GESTIÓN PARA TU NEGOCIO.</p>
+<br>
+<p>7.3. El CLIENTE será responsable del uso incorrecto de los servicios contratados.</p>
+<br>
+<br>
+<h3>7. Utilización del servicio bajo la exclusiva responsabilidad del cliente</h3>
+<br>
+<br>
+<h3>8. Privacidad y seguridad de la utilización de los servicios</h3>
+<br>
+<p>8.1. Políticas de privacidad. El CLIENTE entiende y acepta que al adherirse a los USOS 
+Y CONDICIONES aquí descriptos, consecuentemente se adhiere a las condiciones generales 
+sobre nuestras POLITICAS DE PRIVACIDAD indicadas en el sitio web 
+https://gastonloco.github.io/privacionypolitica</p>
+<br>
+<p>8.2. Datos personales. Datos personales es cualquier información que permite identificar 
+a un individuo. Las clases de datos personales que el presente sitio puede recolectar 
+incluyen el nombre y el apellido de la persona, domicilio, número de teléfono, DNI y 
+dirección de correo electrónico (datos no sensibles). El titular de este sitio no 
+recabará ningún dato personal sobre su persona a menos que EL CLIENTE voluntariamente 
+lo provea o de otro modo lo permita la normativa aplicable sobre protección de datos 
+personales. En consecuencia, quien provee los datos reconoce que proporciona sus datos 
+en forma absolutamente voluntaria y que los mismos son ciertos.</p>
+<br>
+<p>8.3. Consentimiento. El ingreso de los datos personales implica el consentimiento 
+del CLIENTE a ceder sus datos a SISTEMA DE GESTIÓN PARA TU NEGOCIO y ser parte de la 
+base de datos establecida.</p>
+<br>
+<p>8.4. Finalidad. Los datos personales que SISTEMA DE GESTIÓN PARA TU NEGOCIO recolecte 
+sólo serán utilizados conforme con la finalidad que originó su recolección, propósito 
+establecido previamente en las POLITICAS DE PRIVACIDAD.</p>
+<br>
+<p>8.5. Confidencialidad. Los datos personales recabados por SISTEMA DE GESTIÓN PARA 
+TU NEGOCIO son confidenciales y su revelación a terceros se encuentra prohibida. Esta 
+obligación alcanza a cualquier persona que intervenga en cualquier etapa del desarrollo, 
+e inclusive subsiste aún finalizada la relación contractual.</p>
+<br>
+<p>8.6. Acceso a la información. El acceso a la información al SISTEMA DE GESTIÓN PARA 
+TU NEGOCIO queda restringido al propio usuario y a quien él habilite mediante el 
+uso de su “palabra clave” o contraseña. Sólo en las situaciones que el propio usuario 
+lo permita bajo su única responsabilidad, integrantes de SISTEMA DE GESTIÓN PARA TU 
+NEGOCIO podrán también acceder a determinada información para responder a la solicitud 
+de servicio. SISTEMA DE GESTIÓN PARA TU NEGOCIO no controla ni ofrece ninguna clase de 
+garantía sobre la veracidad, vigencia, exhaustividad y/o autenticidad de los datos que 
+los CLIENTES proporcionan sobre sí.</p>
+<br>
+<p>8.7. Responsabilidad. SISTEMA DE GESTIÓN PARA TU NEGOCIO excluye cualquier responsabilidad 
+por los daños y perjuicios de toda índole, que puedan deberse a la incorrecta identidad 
+de los CLIENTES y a la falta de veracidad, vigencia, exhaustividad y/o autenticidad de 
+la información que los CLIENTES deben proporcionar acerca de sí mismos, o que proporcionan 
+o hacen visibles a otros usuarios, y en particular, por los daños y perjuicios de toda 
+naturaleza que puedan deberse a la suplantación de la personalidad por parte de un tercero 
+hacia el CLIENTE o cualquier usuario, en cualquier clase de comunicación o transacción 
+realizada a través del SERVICIO.</p>
+<br>
+<br>
+<h3>9. Modificaciones y suspensión del servicio</h3>
+<br>
+<br>
+<p>Las funcionalidades del SERVICIO podrán verse modificadas y o suspendidas temporalmente 
+con la finalidad de adaptarlas a su evolución técnica. En estos casos, SISTEMA DE GESTIÓN 
+PARA TU NEGOCIO lo notificará al CLIENTE con treinta (30) días de antelación a la fecha 
+prevista para aplicar la modificación correspondiente o la suspensión del SERVICIO.</p>
+<br>
+<br>
+<h3>10. Cancelación y suspensión del servicio</h3>
+<br>
+<br>
+<p>SISTEMA DE GESTIÓN PARA TU NEGOCIO podrá retirar o suspender, cautelarmente, la prestación 
+del SERVICIO a aquellos CLIENTES que incumplan lo establecido en estas Condiciones 
+Generales, comunicándolo debidamente. En este caso, SISTEMA DE GESTIÓN PARA TU NEGOCIO 
+no deberá hacerse responsable por los daños y perjuicios que pudiera ocasionar dicha 
+suspensión.</p>
+<br>
+<br>
+<h3>11. Vigencia</h3>
+<br>
+<br>
+<p>La relación contractual entre SISTEMA DE GESTIÓN PARA TU NEGOCIO y el CLIENTE entrará 
+en vigor a partir de la fecha en que se produzca el alta en el SERVICIO. A tales efectos, 
+se entenderá que se produce el alta, una vez que el CLIENTE haya apretado el botón de 
+“ENVIAR”, conforme se establece en el número 1 de las presentes condiciones. Dicho 
+contrato tendrá una duración mínima de 3 meses, sin perjuicio de la facultad de 
+terminación unilateral o desistimiento reconocida en la cláusula 10.</p>
+<br>
+<br>
+<h3>12. Terminación</h3>
+<br>
+<br>
+<p>12.1. Desistimiento. La finalización del contrato puede darse por decisión del propio 
+CLIENTE, notificada a SISTEMA DE GESTIÓN PARA TU NEGOCIO mediante un medio fehaciente 
+en el plazo de quince (15) días.</p>
+<br>
+<p>12.2. SISTEMA DE GESTIÓN PARA TU NEGOCIO, podrá dar por finalizado el presente acuerdo 
+por cesación en la prestación del SERVICIO, previa comunicación al CLIENTE con TREINTA 
+(30) días de antelación sobre la fecha prevista para dicha cesación.</p>
+<br>
+<p>12.3. Resolución. SISTEMA DE GESTIÓN PARA TU NEGOCIO y el CLIENTE tienen reconocida la 
+facultad de resolver el contrato en caso de incumplimiento de las obligaciones de la 
+otra parte, siempre que tal incumplimiento no fuera subsanado en un plazo máximo de 
+siete (7) días tras la petición de la otra parte solicitando la subsanación del 
+incumplimiento; a no ser que dicho incumplimiento se considerara insubsanable o hiciera 
+imposible el cumplimiento del presente acuerdo para la parte denunciante, en cuyo caso 
+la resolución será inminente.</p>
+<br>
+<p>12.4. Efectos. Terminada la prestación del Servicio objeto de estas Condiciones Generales, 
+SISTEMA DE GESTIÓN PARA TU NEGOCIO facturará el importe completo correspondiente a la 
+última mensualidad. No obstante, en caso de que la finalización de la prestación sea por 
+causa de desistimiento de SISTEMA DE GESTIÓN PARA TU NEGOCIO, ésta facturará el importe 
+correspondiente a la parte proporcional de la última cuota mensual, en función de la fecha 
+de efectividad del desistimiento.</p>
+<br>
+<p>12.5. Reactivación. El CLIENTE podrá reactivar en el momento que desee el servicio luego 
+de haber sido Desistido según lo establecido en la cláusula 12.1. En este caso , para 
+poder acceder a la reactivación, deberá abonar los importes correspondientes al tiempo 
+comprendidos entre la fecha de desistimiento y la fecha de reactivación.</p>
+<br>
+<br>
+<h3>13. Notificaciones</h3>
+<br>
+<br>
+<p>Todas las notificaciones, modificaciones y comunicaciones por parte de SISTEMA DE GESTIÓN 
+PARA TU NEGOCIO al CLIENTE se realizarán de alguna de las siguientes maneras según 
+corresponda: (a) envío por correo electrónico a cualquiera de los buzones que el CLIENTE 
+dispone como parte del SERVICIO; (b) comunicación por medio de una llamada telefónica al 
+número de teléfono indicado por el CLIENTE en el Formulario de Solicitud de Alta. 
+SISTEMA DE GESTIÓN PARA TU NEGOCIO podrá, además, informar de las incidencias 
+relacionadas con el SERVICIO, mediante la publicación en sus páginas Web, cuando 
+dicha información sea de carácter general para todos los CLIENTES.</p>
+<br>
+<p>A estos efectos, el CLIENTE manifiesta que todos los datos facilitados por él son 
+ciertos y correctos, y se compromete a comunicar a SISTEMA DE GESTIÓN PARA TU NEGOCIO 
+todos los cambios relativos a su domicilio, dirección de correo electrónico, teléfono 
+y cualquier otro tipo de información necesaria para la gestión y mantenimiento de la 
+relación contractual entre SISTEMA DE GESTIÓN PARA TU NEGOCIO y el CLIENTE.</p>
+<br>
+<br>
+<h3>14. Ley aplicable y jurisdicción</h3>
+<br>
+<br>
+<p>La prestación del SERVICIO regulada mediante estas Condiciones Generales se regirá y 
+se interpretará conforme a la legislación de la República Argentina. SISTEMA DE GESTIÓN 
+PARA TU NEGOCIO y el CLIENTE, acuerdan someterse a la jurisdicción exclusiva de los 
+Tribunales Ordinarios de la Ciudad Autónoma de Buenos Aires, renunciando de esta forma, 
+a cualquier otro fuero o jurisdicción.</p>
+<br>
+<br>
 
 
 
