--- a/terminos.html
+++ b/terminos.html
@@ -44,7 +44,8 @@
 <h2>Términos y condiciones</h2>
 <br>
 <br>
-<p>Por favor, leé cuidadosamente los Términos y Condiciones Generales del 
+<div> 
+<p class="terminos">Por favor, leé cuidadosamente los Términos y Condiciones Generales del 
     sitio https://gastonloco.github.io/ que se detallan a continuación. 
     Es importante que prestes atención a lo establecido en el presente 
     convenio, ya que el mismo contiene información de tu interés relacionada 
@@ -52,11 +53,12 @@
     páginas, te comprometes a cumplir y aceptar TODOS los términos y 
     condiciones que aparecen a continuación. En caso de no estar de 
     acuerdo con estos términos y condiciones no accedas al Sitio.</p>
+    </div>
 <br>
 <br>
 <h3>1. Condiciones generales del servicio SISTEMA DE GESTIÓN PARA TU NEGOCIO</h3>
 <br>
-<br>
+<br> 
 <p>1.1. Estas Condiciones Generales regulan la prestación del Servicio  
     sistema de gestión para tu negocio  la pulsación del botón “ENVIAR” por 
     parte del CLIENTE atribuye a éste la condición de usuario del SERVICIO e 
