--- a/informacion.html
+++ b/informacion.html
@@ -26,7 +26,7 @@
 <h3>mision:</h3> 
 <br><br>
 <p>Brindar un servicio que sea de utilidad y calidad para nuestros clientes, adecuandonos a las necesidades que tenga cada empresa en su sistema de control y gestion de stock, </p> 
-<p>tambien asegurandole al cliente la seguridad y privacidad de sus datos; Generando asi la confianza de cada uno de nuestros clientes.</p> 
+<p>tambien asegurandole al clientes la seguridad y privacidad de sus datos; Generando asi la confianza de cada uno de nuestros clientes.</p> 
 <p>Apuntamos a Pymes, y empresas que tengan la necesidad, de ordenar, controlar, gestionar sus depositos, en la nube, para llevar un orden en el area fisica, ademas, pueden controlar los pedidos,</p> 
 <p>entregas y pagos generando asi un sistema 100% controlado y eficaz.</p> 
 <p>Actualmente nos encontramos trabajando, y mejorando, sistemas de cobro para, poder integrar los pagos, tanto de proveedores, como de clientes, para obtener un sistema del todo completo, siendo asi</p> 
