--- a/informacion.html
+++ b/informacion.html
@@ -14,28 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="shorcut icon" href="img/logo.jpg">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 </head>
 <body>
-    <br><br>
-<h3>¿Quienes somos?</h3>
-<br><br>
-<p>Somos una empresa, la cual empezo como un proyecto en el año 2012, en Cordoba, Villa Allende, brindado servicio a dos empresas de las zonas</p>  
-<p>el objetivo era expandirnos y brindar un sevricio de calidad, para poder llegar a mas clientes, en el año 2015 ya contabamos con una cartera amplia</p> 
-<p>de clientes, y en la actualidad, brindamos el servicio a todo el pais, pensando en expandirnos a nivel internacional. </p>
-<br><br>
-<h3>mision:</h3> 
-<br><br>
-<p>Brindar un servicio que sea de utilidad y calidad para nuestros clientes, adecuandonos a las necesidades que tenga cada empresa en su sistema de control y gestion de stock, </p> 
-<p>tambien asegurandole al clientes la seguridad y privacidad de sus datos; Generando asi la confianza de cada uno de nuestros clientes.</p> 
-<p>Apuntamos a Pymes, y empresas que tengan la necesidad, de ordenar, controlar, gestionar sus depositos, en la nube, para llevar un orden en el area fisica, ademas, pueden controlar los pedidos,</p> 
-<p>entregas y pagos generando asi un sistema 100% controlado y eficaz.</p> 
-<p>Actualmente nos encontramos trabajando, y mejorando, sistemas de cobro para, poder integrar los pagos, tanto de proveedores, como de clientes, para obtener un sistema del todo completo, siendo asi</p> 
-<p>la unica empresa a nivel nacional, que brinda este servicio.</p> 
-<br><br>
-<h3>Vision:</h3>
-<br><br>
-<p>Queremos lograr que cada empresa, pyme, emprendiemiento en territorio nacional e internacional, genere sus ventas, de manera eficaz, ordenada y segura, brindandole asi mayor tranquilidad  en el control diario, en el futuro apuntamos</p> 
-<p>a ser la empresa con mayor desarrollo tecnologico, para brindar el mejor servicio a cada uno de nuestros clientes.</p> 
     <header class="encabezado">
         <nav class="menu">
                 <div>
@@ -59,6 +40,27 @@
 
 
 <main>
+    <br><br>
+<h3> <mark>¿Quienes somos? </mark></h3>
+<br><br>
+<p class="terminos">Somos una empresa, la cual empezo como un proyecto en el año 2012, en Cordoba, Villa Allende, brindado servicio a dos empresas de las zonas</p>  
+<p class="lead">el objetivo era expandirnos y brindar un sevricio de calidad, para poder llegar a mas clientes, en el año 2015 ya contabamos con una cartera amplia</p> 
+<p class="lead">de clientes, y en la actualidad, brindamos el servicio a todo el pais, pensando en expandirnos a nivel internacional. </p>
+<br><br>
+<h3> <mark>Nuestra Misión:</mark></h3> 
+<br>
+<p class="lead">Brindar un servicio que sea de utilidad y calidad para nuestros clientes, adecuandonos a las necesidades que tenga cada empresa en su sistema de control y gestion de stock, </p> 
+<p class="lead">tambien asegurandole al cliente la seguridad y privacidad de sus datos; Generando asi la confianza de cada uno de nuestros clientes.</p> 
+<p class="lead">Apuntamos a Pymes, y empresas que tengan la necesidad, de ordenar, controlar, gestionar sus depositos, en la nube, para llevar un orden en el area fisica, ademas, pueden controlar los pedidos,</p> 
+<p class="lead">entregas y pagos generando asi un sistema 100% controlado y eficaz.</p> 
+<p class="lead">Actualmente nos encontramos trabajando, y mejorando, sistemas de cobro para, poder integrar los pagos, tanto de proveedores, como de clientes, para obtener un sistema del todo completo, siendo asi</p> 
+<p class="lead">la unica empresa a nivel nacional, que brinda este servicio.</p> 
+<br><br>
+<h3><mark>Nuesta Visión:</mark></h3>
+<br>
+<p class="lead">Queremos lograr que cada empresa, pyme, emprendiemiento en territorio nacional e internacional, genere sus ventas, de manera eficaz, ordenada y segura, brindandole asi mayor tranquilidad  en el control diario, en el futuro apuntamos</p> 
+<p class="lead">a ser la empresa con mayor desarrollo tecnologico, para brindar el mejor servicio a cada uno de nuestros clientes.</p> 
+<br>
   
 </main>
 
