--- a/terminos.html
+++ b/terminos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Curso</title>
+    <title>Factura-Online</title>
     <meta name="author" content="Grupo Aula 3">
     <meta name="description" content="sistema de facturacion vinculada a tu sitio web">
     <meta name="keywords" content="facturas,deposito,control,remito,almacen,presupuesto">
