--- a/informacion.html
+++ b/informacion.html
@@ -43,8 +43,8 @@
     <br><br>
 <h3> <mark>¿Quienes somos? </mark></h3>
 <br>
-<p class="terminos">Somos una empresa, la cual empezo como un proyecto en el año 2012, en Cordoba, Villa Allende, brindado servicio a dos empresas de las zonas</p>  
-el objetivo era expandirnos y brindar un sevricio de calidad, para poder llegar a mas clientes, en el año 2015 ya contabamos con una cartera amplia</p> 
+<p class="terminos">Somos una empresa, la cual empezo como un proyecto en el año 2012, en Cordoba, Villa Allende, brindado servicio a dos empresas de las zonas  
+el objetivo era expandirnos y brindar un sevricio de calidad, para poder llegar a mas clientes, en el año 2015 ya contabamos con una cartera amplia
 de clientes, y en la actualidad, brindamos el servicio a todo el pais, pensando en expandirnos a nivel internacional. </p>
 <br>
 <h3> <mark>Nuestra Misión:</mark></h3> 
